# xlsxecute

./: Dockerfile  README.md  pyproject.toml
examples/crop-production/: crop_production.xlsx  params.csv  params.json
xlsxecute/: command.py  run-excel-model
